// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPasswordWrapper renders ForgotOtpForm initially 1`] = `
<div>
  <div
    class="MuiBox-root css-17vvh6y"
  >
    <div
      class="MuiBox-root css-njzzp3"
    >
      <div
        class="MuiBox-root css-127oxiz"
        data-testid="auth-left-panel"
      >
        <div
          class="MuiBox-root css-s6lh4k"
        >
          <div
            class="MuiBox-root css-1qcrck8"
          >
            <img
              alt="Kivu IMS Logo"
              data-testid="auth-logo"
              src="test-file-stub"
              style="width: 400px; margin: auto;"
            />
          </div>
          <div
            class="MuiBox-root css-1mmnsqo"
          >
            <h6
              class="MuiTypography-root MuiTypography-h6 css-dsixvh-MuiTypography-root"
              data-testid="auth-left-text"
            >
              Re-imagining inventory management experience with advance data analytics for optimum performance
            </h6>
          </div>
        </div>
        <div
          class="MuiBox-root css-vcuh2c"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-okytkp-MuiTypography-root"
            data-testid="auth-left-footer"
          >
            © kivunova 2025
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1948ji6"
    >
      <header
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionRelative css-11e9ewh-MuiPaper-root-MuiAppBar-root"
        style="--Paper-shadow: none;"
      >
        <div
          class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-qnihp3-MuiToolbar-root"
        >
          <div
            class="MuiBox-root css-1wxdje1"
          >
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-sizeSmall MuiInputBase-adornedStart MuiSelect-root css-1qseuth-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
            >
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionStart css-1nowbqt-MuiInputAdornment-root"
              >
                <span
                  aria-hidden="true"
                  class="notranslate"
                >
                  ​
                </span>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-rlfpcf-MuiSvgIcon-root"
                  data-testid="PublicIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39"
                  />
                </svg>
              </div>
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedStart css-1qgzegr-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                role="combobox"
                tabindex="0"
              >
                English
              </div>
              <input
                aria-hidden="true"
                aria-invalid="false"
                class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                tabindex="-1"
                value="en"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-1rfqz7c-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1nf2c5d-MuiNotchedOutlined-root"
                >
                  <span
                    aria-hidden="true"
                    class="notranslate"
                  >
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-xpevbe"
        />
        <div
          class="MuiBox-root css-0"
        />
      </header>
      <div
        data-testid="forgot-otp-form"
      >
        <button
          data-testid="set-email-and-step"
        >
          Simulate ForgotOtpForm Success
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root css-1080b6c"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-okytkp-MuiTypography-root"
        data-testid="forgot-password-footer"
      >
        © kivunova 2025
      </span>
    </div>
  </div>
</div>
`;

exports[`ForgotPasswordWrapper renders OtpValidation after email is set and step is VALIDATE_OTP 1`] = `
<div>
  <div
    class="MuiBox-root css-17vvh6y"
  >
    <div
      class="MuiBox-root css-njzzp3"
    >
      <div
        class="MuiBox-root css-127oxiz"
        data-testid="auth-left-panel"
      >
        <div
          class="MuiBox-root css-s6lh4k"
        >
          <div
            class="MuiBox-root css-1qcrck8"
          >
            <img
              alt="Kivu IMS Logo"
              data-testid="auth-logo"
              src="test-file-stub"
              style="width: 400px; margin: auto;"
            />
          </div>
          <div
            class="MuiBox-root css-1mmnsqo"
          >
            <h6
              class="MuiTypography-root MuiTypography-h6 css-dsixvh-MuiTypography-root"
              data-testid="auth-left-text"
            >
              Re-imagining inventory management experience with advance data analytics for optimum performance
            </h6>
          </div>
        </div>
        <div
          class="MuiBox-root css-vcuh2c"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-okytkp-MuiTypography-root"
            data-testid="auth-left-footer"
          >
            © kivunova 2025
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1948ji6"
    >
      <header
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionRelative css-11e9ewh-MuiPaper-root-MuiAppBar-root"
        style="--Paper-shadow: none;"
      >
        <div
          class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-qnihp3-MuiToolbar-root"
        >
          <div
            class="MuiBox-root css-1wxdje1"
          >
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-sizeSmall MuiInputBase-adornedStart MuiSelect-root css-1qseuth-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
            >
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionStart css-1nowbqt-MuiInputAdornment-root"
              >
                <span
                  aria-hidden="true"
                  class="notranslate"
                >
                  ​
                </span>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-rlfpcf-MuiSvgIcon-root"
                  data-testid="PublicIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39"
                  />
                </svg>
              </div>
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedStart css-1qgzegr-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                role="combobox"
                tabindex="0"
              >
                English
              </div>
              <input
                aria-hidden="true"
                aria-invalid="false"
                class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                tabindex="-1"
                value="en"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-1rfqz7c-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1nf2c5d-MuiNotchedOutlined-root"
                >
                  <span
                    aria-hidden="true"
                    class="notranslate"
                  >
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-xpevbe"
        />
        <div
          class="MuiBox-root css-0"
        />
      </header>
      <div
        data-testid="otp-validation"
      >
        <button
          data-testid="set-token-and-step"
        >
          Simulate OtpValidation Success
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root css-1080b6c"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-okytkp-MuiTypography-root"
        data-testid="forgot-password-footer"
      >
        © kivunova 2025
      </span>
    </div>
  </div>
</div>
`;

exports[`ForgotPasswordWrapper renders ResetPasswordForm after token is set and step is RESET 1`] = `
<div>
  <div
    class="MuiBox-root css-17vvh6y"
  >
    <div
      class="MuiBox-root css-njzzp3"
    >
      <div
        class="MuiBox-root css-127oxiz"
        data-testid="auth-left-panel"
      >
        <div
          class="MuiBox-root css-s6lh4k"
        >
          <div
            class="MuiBox-root css-1qcrck8"
          >
            <img
              alt="Kivu IMS Logo"
              data-testid="auth-logo"
              src="test-file-stub"
              style="width: 400px; margin: auto;"
            />
          </div>
          <div
            class="MuiBox-root css-1mmnsqo"
          >
            <h6
              class="MuiTypography-root MuiTypography-h6 css-dsixvh-MuiTypography-root"
              data-testid="auth-left-text"
            >
              Re-imagining inventory management experience with advance data analytics for optimum performance
            </h6>
          </div>
        </div>
        <div
          class="MuiBox-root css-vcuh2c"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-okytkp-MuiTypography-root"
            data-testid="auth-left-footer"
          >
            © kivunova 2025
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1948ji6"
    >
      <header
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionRelative css-11e9ewh-MuiPaper-root-MuiAppBar-root"
        style="--Paper-shadow: none;"
      >
        <div
          class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-qnihp3-MuiToolbar-root"
        >
          <div
            class="MuiBox-root css-1wxdje1"
          >
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-sizeSmall MuiInputBase-adornedStart MuiSelect-root css-1qseuth-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
            >
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionStart css-1nowbqt-MuiInputAdornment-root"
              >
                <span
                  aria-hidden="true"
                  class="notranslate"
                >
                  ​
                </span>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-rlfpcf-MuiSvgIcon-root"
                  data-testid="PublicIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39"
                  />
                </svg>
              </div>
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedStart css-1qgzegr-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                role="combobox"
                tabindex="0"
              >
                English
              </div>
              <input
                aria-hidden="true"
                aria-invalid="false"
                class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                tabindex="-1"
                value="en"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-1rfqz7c-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
                data-testid="ArrowDropDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1nf2c5d-MuiNotchedOutlined-root"
                >
                  <span
                    aria-hidden="true"
                    class="notranslate"
                  >
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-xpevbe"
        />
        <div
          class="MuiBox-root css-0"
        />
      </header>
      <div
        data-testid="reset-password-form"
      >
        <button
          data-testid="call-handle-success"
        >
          Simulate ResetPasswordForm Success
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root css-1080b6c"
    >
      <span
        class="MuiTypography-root MuiTypography-caption css-okytkp-MuiTypography-root"
        data-testid="forgot-password-footer"
      >
        © kivunova 2025
      </span>
    </div>
  </div>
</div>
`;
